--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -7,7 +7,6 @@
     <meta neam="author" content="Yang Shi">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="">
     <title>Mission to Mars</title>
   </head>
 
@@ -17,7 +16,7 @@
             <div class="col-md-8 p-lg-3 mx-auto">
                 <h1 class="display-4 fw-bold">Mission to Mars</h1>
                 <br>
-                <a class="btn btn-primary" href="/scrape">Scrape New Data</a>
+                <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
             </div>
         </div>
     </div>
